--- a/main.less
+++ b/main.less
@@ -174,7 +174,8 @@ body {
             top: 35%;
             left: 35%;
             .img {
-                
+                height: 100%;
+                width: 100%;
             }
         }
         
