--- a/main.css
+++ b/main.css
@@ -121,7 +121,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-bottom: 62px;
+  padding-bottom: 20px;
+  margin-bottom: -8px;
 }
 .product-gallery .product-item {
   max-width: 33%;
@@ -164,29 +165,27 @@ body {
 }
 .footer {
   max-width: calc(1006px - 20px);
-  min-width: 550px;
   min-height: 303px;
-  margin: -9px auto 0px auto;
+  margin: 0 auto;
   background-color: #403F46;
   color: white;
   display: flex;
-  justify-content: space-between;
-  position: relative;
+  justify-content: space-around;
+  flex-wrap: wrap;
   font-size: 11px;
 }
 .footer p {
   font-size: 11px;
   color: white;
-  margin-top: 13px;
+  margin-top: 15px;
 }
 .footer text {
   font-size: 9px;
   color: white;
 }
 .footer .footer-column-1 {
-  width: 29%;
+  max-width: 33%;
   height: auto;
-  padding-left: 71px;
   line-height: 1.2;
 }
 .footer .footer-column-1 .btn-more {
@@ -223,8 +222,13 @@ body {
   max-width: 32%;
   max-height: 43px;
 }
+@media (max-width: 660px) {
+  .footer .footer-column-1 {
+    max-width: 48%;
+  }
+}
 .footer .footer-column-2 {
-  width: 37%;
+  max-width: 33%;
   height: auto;
   margin-left: 5px;
 }
@@ -252,6 +256,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: space-around;
+  flex-wrap: wrap;
   margin-top: 34px;
 }
 .footer .footer-column-2 .social-media span {
@@ -265,8 +270,13 @@ body {
 .footer .footer-column-2 .social-media .social-media-btn {
   cursor: pointer;
 }
+@media (max-width: 660px) {
+  .footer .footer-column-2 {
+    max-width: 48%;
+  }
+}
 .footer .footer-column-3 {
-  width: 33%;
+  max-width: 33%;
   height: auto;
 }
 .footer .footer-column-3 .contacts {
@@ -306,12 +316,19 @@ body {
 .footer .footer-column-3 .follow-us .follow-us-btn.active {
   background-color: #ffeb00;
 }
+@media (max-width: 660px) {
+  .footer .footer-column-3 {
+    max-width: 48%;
+    padding-bottom: 10px;
+  }
+}
 .footer-navbar {
   max-width: calc(1006px - 20px);
   max-height: 42px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
   background-color: black;
   margin: 0 auto;
   color: white;
@@ -325,6 +342,7 @@ body {
   width: 420px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .footer-navbar .footer-navbar-nav .footer-navbar-link {
   font-size: 10px;
