--- a/main.less
+++ b/main.less
@@ -150,7 +150,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-bottom: 62px;
+    padding-bottom: 20px;
+    margin-bottom: -8px;
 
     .product-item {
         max-width: 33%;
@@ -195,22 +196,23 @@ body {
     }
 }
 
+
 .footer {
     max-width: @main-width;
-    min-width: 550px;
     min-height: 303px;
-    margin: -9px auto 0px auto;
+    margin: 0 auto;
     background-color: @primary-color;
     color: white;
     display: flex;
-    justify-content: space-between;
-    position: relative;
+    justify-content: space-around;
+    flex-wrap: wrap;
     font-size: 11px;
-
+    
+    
     p {
         font-size: 11px;
         color: white; 
-        margin-top: 13px;
+        margin-top: 15px;
     }
 
     text {
@@ -219,9 +221,8 @@ body {
     }
 
     .footer-column-1 {
-        width: 29%;
+        max-width: 33%;
         height: auto;
-        padding-left: 71px;
         line-height: 1.2;
 
         .btn-more {
@@ -260,9 +261,12 @@ body {
                     max-height: 43px;
                 }
             }
+        @media (max-width: 660px) {
+            max-width: 48%;
+        }
     }
     .footer-column-2 {
-        width: 37%;
+        max-width: 33%;
         height: auto;
         margin-left: 5px;
         
@@ -292,6 +296,7 @@ body {
             display: flex;
             justify-content: flex-start;
             align-items: space-around;
+            flex-wrap: wrap;
             margin-top: 34px;
             span {
                 font-size: 11px;
@@ -305,11 +310,14 @@ body {
                 cursor: pointer;
             }
         }
+        @media (max-width: 660px) {
+            max-width: 48%;
+        }
 
     }
     
     .footer-column-3 {
-        width: 33%;
+        max-width: 33%;
         height: auto;
         
         .contacts {
@@ -353,7 +361,12 @@ body {
             }
         }
 
+        @media (max-width: 660px) {
+            max-width: 48%;
+            padding-bottom: 10px;
+        }
     }
+    
 }
 
 .footer-navbar {
@@ -362,6 +375,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
     background-color: black;
     margin: 0 auto;
     color: white;
@@ -376,6 +390,7 @@ body {
         width: 420px;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
 
         
         .footer-navbar-link {
